--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -24,7 +24,10 @@ jobs:
       image: qiwang/clusterd:1.0
     env:
       PATH: /bin:/usr/bin:/usr/local/bin:/usr/local/go/bin
+      GOBIN: /usr/local/bin
       GOFLAGS: "-buildvcs=false"
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'true'
       - run: make integration-test-sqlite
